// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Panel ListPanel.Item matches snapshot: ListPanel.Item 1`] = `
<div>
  <li
    class="nhsuk-list-panel__item"
  />
</div>
`;

exports[`Panel ListPanel.LinkItem matches snapshot: ListPanel.LinkItem 1`] = `
<div>
  <li
    class="nhsuk-list-panel__item"
  >
    <a
      class="nhsuk-list-panel__link"
    />
  </li>
</div>
`;

exports[`Panel matches snapshot: ListPanel 1`] = `
<div>
  <div
    class="nhsuk-card nhsuk-card--feature"
  >
    <div
      class="nhsuk-card__content nhsuk-card__content--feature"
    >
      <ul
        class="nhsuk-list nhsuk-list--border"
      />
    </div>
  </div>
</div>
`;
